--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztA-9O-cRx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="LexendDeca-Regular.ttf">
+            <string>LexendDeca-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Users-->
         <scene sceneID="fmw-9S-pF7">
@@ -19,18 +24,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="79" id="n4r-Pg-MmS" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="79" id="n4r-Pg-MmS" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="79"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n4r-Pg-MmS" id="4nM-0w-1d3">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="341" height="78.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Tb-ju-cov">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="78.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="CEf-xc-lkn">
-                                                    <rect key="frame" x="16" y="0.0" width="343" height="78.5"/>
+                                                    <rect key="frame" x="16" y="0.0" width="309" height="78.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="anW-mP-dHr">
                                                             <rect key="frame" x="0.0" y="0.0" width="78.5" height="78.5"/>
@@ -39,15 +44,17 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xdd-5v-YPE">
-                                                            <rect key="frame" x="94.5" y="0.0" width="248.5" height="78.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
+                                                            <rect key="frame" x="94.5" y="0.0" width="214.5" height="78.5"/>
+                                                            <fontDescription key="fontDescription" name="LexendDeca-Regular" family="Lexend Deca" pointSize="17"/>
+                                                            <color key="textColor" red="0.13029712438583374" green="0.40848726034164429" blue="0.4120105504989624" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <size key="shadowOffset" width="0.0" height="1"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="CEf-xc-lkn" firstAttribute="top" secondItem="9Tb-ju-cov" secondAttribute="top" id="E01-6D-4BL"/>
                                                 <constraint firstItem="CEf-xc-lkn" firstAttribute="leading" secondItem="9Tb-ju-cov" secondAttribute="leading" constant="16" id="Nzv-w2-nrq"/>
@@ -66,7 +73,7 @@
                                 <connections>
                                     <outlet property="userImageView" destination="anW-mP-dHr" id="abq-4V-jNW"/>
                                     <outlet property="userNameLabel" destination="Xdd-5v-YPE" id="aUA-PQ-DGK"/>
-                                    <segue destination="iXR-E8-VdM" kind="show" id="8uQ-fb-dOz"/>
+                                    <segue destination="iXR-E8-VdM" kind="show" identifier="ShowDetails" id="8uQ-fb-dOz"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -96,42 +103,46 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iwo-WD-BEp">
-                                <rect key="frame" x="16" y="186" width="343" height="457"/>
+                                <rect key="frame" x="16" y="156.5" width="343" height="450.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kgz-sh-aiP">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="kgz-sh-aiP">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="kgz-sh-aiP" secondAttribute="height" multiplier="1:1" id="mTh-cw-4jA"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2x-iO-V3Q">
-                                        <rect key="frame" x="0.0" y="351" width="343" height="49"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="0.0" y="351" width="343" height="38.5"/>
+                                        <fontDescription key="fontDescription" name="LexendDeca-Regular" family="Lexend Deca" pointSize="30"/>
+                                        <color key="textColor" red="0.13029712439999999" green="0.40848726029999999" blue="0.41201055050000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="shadowOffset" width="0.0" height="1"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPq-gI-Qcc">
-                                        <rect key="frame" x="0.0" y="408" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPq-gI-Qcc">
+                                        <rect key="frame" x="0.0" y="397.5" width="343" height="22.5"/>
+                                        <fontDescription key="fontDescription" name="LexendDeca-Regular" family="Lexend Deca" pointSize="17"/>
+                                        <color key="textColor" red="0.13029712439999999" green="0.40848726029999999" blue="0.41201055050000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="shadowOffset" width="0.0" height="1"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4Q-70-iVC">
-                                        <rect key="frame" x="0.0" y="436.5" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4Q-70-iVC">
+                                        <rect key="frame" x="0.0" y="428" width="343" height="22.5"/>
+                                        <fontDescription key="fontDescription" name="LexendDeca-Regular" family="Lexend Deca" pointSize="17"/>
+                                        <color key="textColor" red="0.13029712439999999" green="0.40848726029999999" blue="0.41201055050000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <size key="shadowOffset" width="0.0" height="1"/>
                                     </label>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="iwo-WD-BEp" firstAttribute="top" secondItem="iCS-ZV-4Ua" secondAttribute="top" constant="70" id="BLL-LZ-5bH"/>
-                            <constraint firstItem="iCS-ZV-4Ua" firstAttribute="trailing" secondItem="iwo-WD-BEp" secondAttribute="trailing" constant="16" id="WB2-6b-kco"/>
-                            <constraint firstItem="iCS-ZV-4Ua" firstAttribute="bottom" secondItem="iwo-WD-BEp" secondAttribute="bottom" constant="24" id="cbt-P7-GRz"/>
-                            <constraint firstItem="iwo-WD-BEp" firstAttribute="leading" secondItem="iCS-ZV-4Ua" secondAttribute="leading" constant="16" id="hsn-kO-DKH"/>
-                            <constraint firstItem="iwo-WD-BEp" firstAttribute="centerX" secondItem="v3o-cT-x2X" secondAttribute="centerX" id="jiX-SJ-pnS"/>
+                            <constraint firstItem="iCS-ZV-4Ua" firstAttribute="bottom" secondItem="iwo-WD-BEp" secondAttribute="bottom" constant="60" id="1Kb-L2-JaE"/>
+                            <constraint firstItem="iwo-WD-BEp" firstAttribute="leading" secondItem="iCS-ZV-4Ua" secondAttribute="leading" constant="16" id="2Pm-mW-nsl"/>
+                            <constraint firstItem="iCS-ZV-4Ua" firstAttribute="trailing" secondItem="iwo-WD-BEp" secondAttribute="trailing" constant="16" id="9Gb-pv-w00"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iCS-ZV-4Ua"/>
                     </view>
